# organism

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
RFC/: Arquitectura_de_un_Organismo_Cognitivo_Homeostatico.md  RFC-0000-Filosofia-del-Proyecto.md  RFC-0001-Coding-Style.md  RFC-0003-Homeostasis-Cognitiva.md  RFC-0004-Metabolismo-Cognitivo.md  RFC-0005-Sistema-Endocrino-Cognitivo.md  RFC-0006-Sistema-de-Atencion.md  RFC-0007-Organos-Cognitivos.md  RFC-0008-Memoria-cognitiva.md  RFC-0009-Aprendizaje-Cognitivo.md  RFC-0010-Prediccion-Cognitiva.md  RFC-0011-Deteccion-de-Contradicciones.md  RFC-0012-Curiosidad-y-Novedad.md  RFC-0013-Formacion-de-Conceptos.md  RFC-0014-Lenguaje-Natural.md  RFC-0015-Introspeccion-Cognitiva.md  RFC-0016-Madurez-Cognitiva.md  RFC-0017-Ciclo-Cognitivo.md  RFC-0018-Ontologia-Cognitiva.md  RFC-0019-Modelo-de-Creencias.md  RFC-0020-Toma-de-Decisiones.md  RFC-0021-Objetivos-y-Motivaciones.md
include/: homeostasis.h  hormones.h  organ.h  organism.h
src/: main.c  organism
src/core/: organism.c
tools/: build.sh  run.sh
